--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="public/index.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <title>Direflow Project</title>
   </head>
   <body>
     <!-- Insert your Direflow Component here -->
     <bz-experience></bz-experience>
   </body>
-  <script src="./projectBundle.js"></script>
+  <!-- This is for master index -->
+  <!-- <script type="text/javascript" src="./projectBundle.js"></script> -->
 </html>
