--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,21 @@
   <title>Agency - Start Bootstrap Theme</title>
 
   <!-- Bootstrap core CSS -->
+  <!-- TODO comment for netlify -->
   <link href="public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="public/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="public/css/agency.css" rel="stylesheet">
+
+  <!-- TODO Uncomment for netlify -->
+  <!-- <link href="./vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="./css/agency.css" rel="stylesheet"> -->
 
   <!-- Custom fonts for this template -->
-  <link href="public/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
-  <!-- Custom styles for this template -->
-  <link href="public/css/agency.css" rel="stylesheet">
 
 </head>
 
@@ -725,21 +729,23 @@
     </div>
   </div>
 
-  <!-- Bootstrap core JavaScript -->
+  <!-- TODO comment for netlify -->
   <script src="public/vendor/jquery/jquery.min.js"></script>
   <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript -->
   <script src="public/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Contact form JavaScript -->
   <script src="public/js/jqBootstrapValidation.js"></script>
   <script src="public/js/contact_me.js"></script>
-
-  <!-- Custom scripts for this template -->
   <script src="public/js/agency.js"></script>
 
-  <!-- This is for master index -->
+  <!-- TODO uncomment for netlify -->
+  <!-- <script src="./vendor/jquery/jquery.min.js"></script>
+  <script src="./vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="./js/jqBootstrapValidation.js"></script>
+  <script src="./js/contact_me.js"></script>
+  <script src="./js/agency.js"></script> -->
+
+  <!-- TODO This is for master index -->
   <!-- <script type="text/javascript" src="./projectBundle.js"></script> -->
 </body>
 
