--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,13 @@
 
   </div>
 
-  <bz-experience></bz-experience>
+  <!-- <section class=""> -->
+
+    <div class="component-container bg-light">
+
+      <bz-experience></bz-experience>
+    </div>
+  <!-- </section> -->
 
 
 
@@ -141,7 +147,7 @@
   </section> -->
 
   <!-- Portfolio Grid -->
-  <section class="bg-light page-section" id="portfolio">
+  <section class="page-section" id="portfolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -157,10 +163,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="public/img/news/1.png" alt="">
+            <!-- <img class="img-fluid" src="img/news/01.png" alt=""> -->
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
+            <h4>Prima del film Ratisbona e Bressanone</h4>
             <p class="text-muted">Illustration</p>
           </div>
         </div>
@@ -171,11 +178,12 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="public/img/news/2.jpg" alt="">
+            <!-- <img class="img-fluid" src="img/news/2.jpg" alt=""> -->
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4>Il comune cerca persone</h4>
+            <!-- <p class="text-muted">Graphic Design</p> -->
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -185,14 +193,15 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="public/img/news/3.jpg" alt="">
+            <!-- <img class="img-fluid" src="img/news/3.jpg" alt=""> -->
           </a>
           <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
+            <h4>Presidente della provincia e giunta comunale in dialogo coi cittadini</h4>
+            <!-- <p class="text-muted">Identity</p> -->
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <!-- <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -233,7 +242,7 @@
             <h4>Window</h4>
             <p class="text-muted">Photography</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -410,36 +419,8 @@
     </div>
   </section>
 
-  <!-- Clients -->
-  <section class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Contact -->
-  <section class="page-section" id="contact">
+  <!-- <section class="page-section" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -481,7 +462,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Footer -->
   <footer class="footer">
