--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Agency - Start Bootstrap Theme</title>
+  <title>Brixen</title>
 
   <!-- Bootstrap core CSS -->
   <!-- TODO comment for netlify -->
