--- a/public/index.html
+++ b/public/index.html
@@ -203,8 +203,8 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="public/img/news/1.png" alt="" />
-              <!-- <img class="img-fluid" src="img/news/01.png" alt=""> -->
+              <!-- <img class="img-fluid" src="public/img/news/1.png" alt="" /> -->
+              <img class="img-fluid" src="img/news/01.png" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Prima del film Ratisbona e Bressanone</h4>
@@ -222,8 +222,8 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="public/img/news/2.jpg" alt="" />
-              <!-- <img class="img-fluid" src="img/news/2.jpg" alt=""> -->
+              <!-- <img class="img-fluid" src="public/img/news/2.jpg" alt="" /> -->
+              <img class="img-fluid" src="img/news/2.jpg" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Il comune cerca persone</h4>
@@ -241,8 +241,8 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="public/img/news/3.jpg" alt="" />
-              <!-- <img class="img-fluid" src="img/news/3.jpg" alt=""> -->
+              <!-- <img class="img-fluid" src="public/img/news/3.jpg" alt="" /> -->
+              <img class="img-fluid" src="img/news/3.jpg" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>
@@ -299,7 +299,7 @@
     </section>
 
     <!-- About -->
-    <section class="page-section" id="about">
+    <!-- <section class="page-section" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -413,10 +413,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Team -->
-    <section class="bg-light page-section" id="team">
+    <!-- <section class="bg-light page-section" id="team">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -510,7 +510,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Contact -->
     <!-- <section class="page-section" id="contact">
